deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: otus-home-kubernetes-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: otus-home-kubernetes
    template:
       metadata:
          labels:
             app: otus-home-kubernetes
       spec:
          containers:
          - name: otus-home-kubernetes-container
            image: dimandocker/otus.home.docker.webapplication:v1.0
            ports:
              - name: web 
                containerPort: 80
            livenessProbe:
              httpGet:
                port: 80
                path: /
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 80
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
