service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-home-kubernetes-service
spec:
  selector:
    app: otus-home-kubernetes
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web 
  type: NodePort
