ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-home-kubernetes-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: otus-home-kubernetes-service
              port:
                number: 8000
